# hr_00_01_02

./: .gitignore  README.md  app.py  config.py  custom_embeddings.py  database.py  document_processor.py  pyproject.toml  requirements.txt  semantic_chunking.py  utils.py
.chainlit/: config.toml
data/chromadb_locale/: chroma.sqlite3
hr_assistant/: __init__.py  app.py  config.py  custom_embedding.py  custom_embeddings.py  database.py  document_processor.py  semantic_chunking.py  utils.py
modelli/: modello_locale.py  setup_modello.py
modelli/mio_modello_personalizzato/: README.md  config.json  tokenizer_config.json
public/: app.css
resumes/: cv-alessandra-verdi.txt  cv-elena-neri.txt  cv-luca-bianchi.txt  cv-mario-rossi.txt  cv-mario-rossini.txt  cv-mario-verdi.txt  cv-simone-galli.txt
src/data/chromadb_locale/: chroma.sqlite3
src/hr_assistant/: __init__.py  config.py  database.py  document_processor.py  utils.py
tests/: CHANGE_LOG.md
