[project]
name = "hr-assistant"
version = "0.1.0"
description = "Il mio assistente HR personalizzato"
authors = [
    {name = "Il Tuo Nome Cognome", email = "tua_email@esempio.it"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "chromadb (>=0.6.3,<0.7.0)",
    "openai (>=1.59.9,<2.0.0)",
    "chainlit (>=2.0.5,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
